# Nuitka-Compile-Report-Parser

./: .gitignore  README.md  build_times.html  helpers.py  main.py  output.html  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
experiments/: dependency_from_report.py
nuitka_reporter/: __init__.py  __main__.py  _types.py  helpers.py  main.py
nuitka_reporter/experiments/: bok.py  dependency_from_report.py  dependency_graph.py
nuitka_reporter/plot/: plotter.py  size.py  time.py
plot/: plotter.py  size.py  time.py
src/: helpers.py  main.py  types.py
src/experiments/: dependency_from_report.py  square.py
src/plot/: plotter.py  size.py  time.py
tests/: test_generate.py
tests/data/: compilation-report.xml  compilation-report_4.0.xml  compilation-report_4.1.xml  compilation-report_4.1_diffable.xml
tests/project/: example.py  import_1.py
