[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "nuitka_reporter/_version.py"

[project]
name = "nuitka_reporter"
dynamic = ["version"]
authors = [
  { name="James Morrow", email="james@corner.dev" },
]
description = "A small package that converts a nuitka compile report into a readable html file"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "minify-html-onepass>=0.18.1",
    "dash>=4.1.0",
    "dash-bootstrap-components>=2.0.4",
    "plotly>=6.6.0",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "semantic_version>=2.10.0",
]

[project.urls]
"Homepage" = "https://github.com/Bingdom/Nuitka-Compile-Report-Parser"
"Bug Tracker" = "https://github.com/Bingdom/Nuitka-Compile-Report-Parser/issues"

[project.scripts]
nuitka-reporter = "nuitka_reporter.__main__:main"
